Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     </div>
     <script>
       var dodger = document.getElementById('dodger');
+      
+      function moveDodgerRight(){
+        
+      }
     </script>
   </body>
 </html>
