--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
       }
       
       document.addEventListener('keydown', function(e){
-        if(e.which ===)
+        if(e.which === 39){
+          moveDodgerRight();
+        }
       })
     </script>
   </body>
