Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       var dodger = document.getElementById('dodger');
       
       function moveDodgerRight(){
-        var rightNumber = dodger.style.right.replace('px'. '');
+        var rightNumber = dodger.style.right.replace('px', '');
         var right = parseInt(rightNumber, 10);
         
         if (right < 180){
