--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
       var dodger = document.getElementById('dodger');
       
       document.addEventListener('keydown', function(e){
-        if(e.which === )
+        if(e.which === 39){
+          alert('you have pressed right');
+        }
       })
 
     </script>
