--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       
       document.addEventListener('keydown', function(e){
         if(e.which === 39){
+          var rightNumbers = dodger.style.right.replace('px','');
           
         }
       })
