Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <script>
       var dodger = document.getElementById('dodger');
       
-      document.addEventListener('keydown', function(e){
-        if(e.which === 39){
-          var rightNumbers = dodger.style.right.replace('px','');
-          var right = parseInt(rightNumbers, 10);
+      // document.addEventListener('keydown', function(e){
+      //   if(e.which === 39){
+      //     var rightNumbers = dodger.style.right.replace('px','');
+      //     var right = parseInt(rightNumbers, 10);
           
-          dodger.style.right = `${right+1}px`;
-        }
-      })
+      //     dodger.style.right = `${right+1}px`;
+      //   }
+      // })
 
     </script>
   </body>
