--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script>
       var dodger = document.getElementById('dodger');
       
-   
+      funtction 
     </script>
   </body>
 </html>
