--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
     <script>
       var dodger = document.getElementById('dodger');
       
-      funtction 
+      function moverDodgerLeft(){
+        var leftNumber = dodger.style.left.replace('px','');
+        var left = parseInt(leftNumber, 10);
+        
+        dodger.style.left = `${left-1}`;
+      }
     </script>
   </body>
 </html>
