Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         var leftNumber = dodger.style.left.replace('px','');
         var left = parseInt(leftNumber, 10);
         
-        dodger.style.left = `${left-1}`;
+        dodger.style.left = `${left-1}px`;
       }
       
       document.addEventListener('keydown', function(e){
