--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         var leftNumber = dodger.style.left.replace('px','');
         var left = parseInt(leftNumber, 10);
         
-        dodger.style.left = `${left-1}px`;
+        if (left > 0){
+          dodger.style.left = `${left-1}px`;
+        }
       }
       
       document.addEventListener('keydown', function(e){
