--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
           moverDodgerLeft();
         }
       })
+      
+      function moveDodgerRight(){
+        var leftNumber = dodger.style.left.replace('px','');
+        var left = parseInt(leftNumber, 10);
+        
+        dodger.style.left = `${left+1}px`;
+      }
     </script>
   </body>
 </html>
