Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
         
         dodger.style.left = `${left+1}px`;
       }
+      
+      document.addEventListener('keydown', function(e){
+        if(e.which === 39){
+          moveDodgerRight();
+        }
+      })
     </script>
   </body>
 </html>
