Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         var leftNumber = dodger.style.left.replace('px','');
         var left = parseInt(leftNumber, 10);
         
+        if(left > )
           dodger.style.left = `${left+1}px`;
         
       }
