--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         var leftNumber = dodger.style.left.replace('px','');
         var left = parseInt(leftNumber, 10);
         
-        if(left > 360){
+        if(left < 360){
           dodger.style.left = `${left+1}px`; 
         }
       }
